@@ -27,6 +27,9 @@ xymon (4.4.0-alpha5) unstable; urgency=low
      a worker before sending it messages, to give it time to initialize.
    * xymond_channel will now attempt to finish sending any messages that 
      were still pending for workers before it completely exits.
+   * xymond_channel will now pass the channel it's connected to onto its
+     workers via the XYMOND_CHANNELNAME environment variable. xymond_filestore
+     and xymond_capture will now use this value if no options are given.
 
    
    * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
